--- a/MaleFashion/MaleFashion.csproj
+++ b/MaleFashion/MaleFashion.csproj
@@ -299,6 +299,9 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Code\Database\DanhGia.cs" />
+    <Compile Include="App_Code\Database\HinhAnh.cs" />
+    <Compile Include="App_Code\Database\HoaDon.cs" />
     <Compile Include="App_Code\Database\KhachHang.cs" />
     <Compile Include="App_Code\Database\LoaiSanPham.cs" />
     <Compile Include="App_Code\Database\SanPham.cs" />
