--- a/MaleFashion/Web.config
+++ b/MaleFashion/Web.config
@@ -4,35 +4,20 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  <appSettings>
-    <add key="ConnectionString" value="Provider=SQLOLEDB;server=LAPTOP-6LEAMI4B\SQLEXPRESS01;database=male_shop;Integrated Security=sspi;charset=utf8" />
-  </appSettings>
-  <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
-    <pages>
-      <namespaces>
-        <add namespace="System.Web.Optimization" />
-      </namespaces>
-      <controls>
-        <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
-      </controls>
-    </pages>
-  </system.web>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" />
-        <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+	<appSettings>
+		<add key="ConnectionString" value="Provider=SQLOLEDB;server=DESKTOP-FT6N8PR\SQLEXPRESS;database=male_shop;Integrated Security=sspi;charset=utf8"/>
+	</appSettings>
+	<system.web>
+		<compilation debug="true" targetFramework="4.7.2" />
+		<httpRuntime targetFramework="4.7.2" />
+		<pages>
+			<namespaces>
+				<add namespace="System.Web.Optimization" />
+			</namespaces>
+			<controls>
+				<add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
+			</controls>
+		</pages>
+	</system.web>
+	
 </configuration>
