--- a/MaleFashion/Web.config
+++ b/MaleFashion/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
 	<appSettings>
-		<add key="ConnectionString" value="Provider=SQLOLEDB;server=LAPTOP-6LEAMI4B\SQLEXPRESS01;database=male_shop;Integrated Security=sspi;charset=utf8"/>
+		<add key="ConnectionString" value="Provider=SQLOLEDB;server=DESKTOP-FT6N8PR\SQLEXPRESS;database=male_shop;Integrated Security=sspi;charset=utf8"/>
 	</appSettings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.7.2" />
